syntax = "proto3";

package chat;

option go_package = "./chatserver";

service ChatServer {
  rpc Message(stream ChatMessage)returns (stream ChatMessage){}
}


enum MessageType{
      User = 0;
      Hello = 1;
      Quit = 2;
   }



message ChatMessage{
    string username = 1;
    MessageType messageType=2;
}
